# fg_1

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: Image.cpp  Image.h  Monitor.hpp  Palette.cpp  Palette.h  Pixel.h  Process.cpp  Process.h  main.cpp
